# python-practice

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md
docs/01-installation/: README.md
docs/02-language/: 07_execution_scope.md  README.md
docs/03-stdlib/: 13_subprocess.md  README.md
docs/04-tooling/: README.md
docs/05-automation/: README.md
docs/06-web/: 15_http_api.md  README.md
docs/90-standards/: README.md  python-conventions.md
docs/91-templates/: README.md
docs/99-agents/: README.md  doc-writer.md
docs/agents/: code-reviewer.md
docs/automation/: 12_cli_argparse.md
docs/basics/: 02_variables_types.md  03_conditionals_loops.md  04_functions.md
docs/data/: 05_collections.md
docs/install/: 01_environment.md
docs/io/: 10_file_json_yaml_csv.md
docs/language/: 08_exceptions.md
docs/modules/: 06_modules_packages.md
docs/oop/: 09_class_dataclass.md
docs/operations/: 16_logging.md  17_typing.md  18_packaging.md
docs/rules/: doc-writing.md
docs/templates/: runbook.md  service-doc.md
docs/testing/: 11_pytest.md
docs/tooling/: 18_packaging.md
docs/web/: 14_fastapi_basics.md
ops/: README.md
ops/examples/: 01_hello.py  02_types.py  03_collections.py  04_file_json.py  05_argparse_cli.py
ops/memory/: MEMORY.md  project_python_study.md
ops/tests/: test_examples.py
ops/tools/: pyproject.example.toml  run_examples.py
tests/: test_examples.py
